# Halide

./: Makefile
apps/hannk/: CMakeLists.txt  Makefile
apps/hannk/delegate/: CMakeLists.txt
apps/hannk/halide/: CMakeLists.txt
apps/hannk/interpreter/: CMakeLists.txt
apps/hannk/tflite/: CMakeLists.txt
apps/hannk/util/: CMakeLists.txt
cmake/: Wasm.cmake
dependencies/llvm/: CMakeLists.txt
src/: CMakeLists.txt
src/runtime/: CMakeLists.txt
